# mcp-tester

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
static/: index.html
